vvs.css
html, body {
    height: 100%;
    font-size: x-large;
}

.copyright {
  position: absolute;
  z-index: -1;
  bottom: 0px;
  font-size: xx-small;
}

.clock {
    font-size: xx-large;
    width: 50%;
    text-align: right;
    overflow: hidden;
}

.update {
    font-size: xx-large;
    width: 50%;
    float: left;
}

.stations {
    column-count: 2;
    -webkit-column-count: 2; /* Chrome, Safari, Opera */
    -moz-column-count: 2; /* Firefox */
}

.station {
        margin-bottom: 15px;
        break-inside: avoid;
}

.stationName {
    background-color: #FF6600;
    border-radius: 25px;
    /* prevent text floating out of the colored area */
    padding-left: 9px;
    /* prevent text floating out of the colored area */
    padding-right: 9px;
    margin-bottom: 5px;
    font-weight: bold;
}

.connection {
    margin-left: 18px;
}

.time-span {
    width: 120px;
    display: inline-block;
}

.delay {

}

.delayGreen {
    color: #006400;
}

.delayOrange {
    color: #E89702;
    font-weight: bold;
}

.delayRed {
    color: #DC143C;
    font-weight: bold;
}

